--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Krunal Patel</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,8 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
+  <link rel="stylesheet"
+    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link href="css/resume.min.css" rel="stylesheet">
 
 </head>
@@ -42,15 +44,17 @@
         <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#project">Projects</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#education">Education</a>
       </li>
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#skills">Technical Skills</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#project">Projects</a>
+      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#current-project">Current Project</a>
+      </li> -->
     </ul>
   </div>
 </nav>
@@ -104,16 +108,28 @@
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
         <div class="resume-content">
-          <h3 class="mb-0">Web Instructor at College CDI</h3>
+          <h3 class="mb-0">Web Instructor</h3>
+          <div class="subheading">CDI COLLEGE</div>
+          <p>
+            Please visit this
+            <mark>
+              <a target="_blank"
+                href="https://www.cdicollege.ca/quebec/programs-and-courses/art-and-design/web-design-lca-c0/">
+                URL
+              </a>
+            </mark>
+            to see what I instruct at CDI College. (Please see PROGRAM COURSES section when you visit this connect).
+          </p>
+
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">Present</span>
+          <span class="text-primary">Septeber 2019 - Present</span>
         </div>
       </div>
       <br>
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
-          <h3 class="mb-0">Project Leader</h3>
+          <h3 class="mb-0">Project Leader + Developer</h3>
           <div class="subheading">Progranz</div>
           <div class="subheading mb-3">Dr. Jivraj Mehta Institute of Technology</div>
           <p>Progranz is an e-learning web application. An easy automotive Progranz is providing all need material for
@@ -196,9 +212,6 @@
 
   <hr class="m-0">
 
-
-
-
   <!-- About Skills Start -->
   <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="skills">
     <div class="w-100">
@@ -211,70 +224,62 @@
         <li class="list-inline-item database">MySQL</li>
         <li class="list-inline-item database">SQLite</li>
         <li class="list-inline-item database">MongoDB</li>
+        <li class="list-inline-item database">Firebase</li>
       </ul>
       <div class="subheading mb-2">Programming Languages &amp; Frameworks </div>
       <ul class="list-inline dev-icons">
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="C">
-          <!-- <img src="./img/languages/c.png" /> -->
-          <i class="devicon-c-plain"></i>
+          <img src="./img/languages/c.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="C++">
-          <!-- <img src="./img/languages/c++.png" /> -->
-          <i class="devicon-cplusplus-plain"></i>
+          <img src="./img/languages/c++.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="C#">
-          <!-- <img src="./img/languages/csharp.png" /> -->
-          <i class="devicon-csharp-plain"></i>
+          <img src="./img/languages/csharp.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Java">
-          <!-- <img src="./img/languages/java01.png" /> -->
-          <i class="devicon-java-plain-wordmark"></i>
+          <img src="./img/languages/java.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Python">
-          <!-- <img src="./img/languages/python.png" /> -->
-          <i class="devicon-python-plain"></i>
+          <img src="./img/languages/python.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Django">
-          <i class="devicon-django-plain"></i>
+          <img src="./img/languages/django.png" />
         </li>
-        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Node js">
-          <i class="devicon-nodejs-plain-wordmark"></i>
+        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Node.js">
+          <img src="./img/languages/nodejs.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Swift">
-          <!-- <img src="./img/languages/swift.png" /> -->
-          <i class="devicon-swift-plain"></i>
+          <img src="./img/languages/swift.png" />
         </li>
       </ul>
       <ul class="list-inline dev-icons">
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="HTML">
-          <!-- <img src="./img/languages/html01.png" /> -->
-          <i class="devicon-html5-plain-wordmark"></i>
+          <img src="./img/languages/html.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="CSS">
-          <!-- <img src="./img/languages/css01.png" /> -->
-          <i class="devicon-css3-plain-wordmark"></i>
+          <img src="./img/languages/css.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Bootstrap">
-          <!-- <img src="./img/languages/bootstrap.png" /> -->
-          <i class="devicon-bootstrap-plain"></i>
+          <img src="./img/languages/bootstrap.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="JavaScript">
-          <!-- <img src="./img/languages/javascript.png" /> -->
-          <i class="devicon-javascript-plain"></i>
+          <img src="./img/languages/javascript.png" />
+        </li>
+        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="TypeScript">
+          <img src="./img/languages/typescript.png" />
+        </li>
+        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Angular2+">
+          <img src="./img/languages/angular.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="jQuery">
-          <!-- <img src="./img/languages/jquery.png" /> -->
-          <i class="devicon-jquery-plain"></i>
+          <img src="./img/languages/jquery.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="PHP">
-          <!-- <img src="./img/languages/php.png" /> -->
-          <i class="devicon-php-plain"></i>
+          <img src="./img/languages/php.png" />
         </li>
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Wordpress">
-          <i class="devicon-wordpress-plain"></i>
-        </li>
-        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Ajax">
-          <img src="./img/languages/ajax.png" style="margin-bottom: 15px;" />
+          <img src="./img/languages/wordpress.png" />
         </li>
       </ul>
 
@@ -302,22 +307,14 @@
           <img src="./img/tools/xcode.png" />
         </li>
       </ul>
-      <!-- <div class="subheading mb-3">Workflow</div>
-      <ul class="fa-ul mb-0">
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Mobile-First, Responsive Design</li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Cross Browser Testing &amp; Debugging</li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Cross Functional Teams</li>
-        <li>
-          <i class="fa-li fa fa-check"></i>
-          Agile Development &amp; Scrum</li>
+
+      <div class="subheading mb-2">Image Processing</div>
+      <ul class="list-inline">
+        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Photoshop">
+          <img src="./img/tools/photoshop.png" />
+        </li>
       </ul>
-    </div> -->
+    </div>
   </section>
   <!-- About Skills End -->
 
@@ -327,6 +324,40 @@
   <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="project">
     <div class="w-100">
       <h2 class="mb-5">Academic and self-learning Projects</h2>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0"><a href="https://oshop-8327c.web.app/" target="_blank">
+              Organic Shop Using Angular + Firebase</a>
+          </h3>
+          <div class="subheading">
+            <a href="https://oshop-8327c.web.app/" target="_blank">
+              Live Demo</a>
+            <a class="ml-5" href="https://github.com/krunal273/Oraganic-Shop" target="_blank">
+              GitHub Repo</a>
+          </div>
+          <div class="subheading">HTML, CSS, Bootstrap, Angular (Typescript + RxJs), Firebase (Firestore)
+          </div>
+          <p>The organic shop is an online store web app for an organic product. I developed this project using Angular
+            9
+            (TypeScript and RxJs) and Cloud Firestore database of Google Firebase which is very powerful realtime
+            database.
+            Moreover, the admin side(panel) is implemented with rich features and functionality. Such as, the admin can
+            do CRUD
+            operation, functionality like sorting, pagination, filtering. Besides,
+            an anonymous user can add items to cart but to order user must have to login via Google (Google
+            Authentication).
+            <br>
+            <mark>
+              To check admin side please visit GitHub Repository of this project(link added above) where I
+              added all the images to the Readme file.
+            </mark>
+          </p>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Self-Learning Project</span>
+        </div>
+      </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
@@ -342,7 +373,7 @@
           </p>
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">Academic Project (Internship)</span>
+          <span class="text-primary">Internship + Self-Learning Project</span>
         </div>
       </div>
 
@@ -440,6 +471,32 @@
 
   <hr class="m-0">
 
+  <!-- About current-project Start -->
+  <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="current-project">
+    <div class="w-100">
+      <h2 class="mb-5">Academic and self-learning Projects</h2>
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0"><a href="https://oshop-8327c.web.app/" target="_blank">
+              Organic Shop Using Angular + Firebase</a>
+          </h3>
+          <div class="subheading">
+            <a href="https://oshop-8327c.web.app/" target="_blank">
+              Live Demo</a>
+            <a class="ml-5" href="https://github.com/krunal273/Oraganic-Shop" target="_blank">
+              GitHub Repo</a>
+          </div>
+          <div class="subheading">HTML, CSS, Bootstrap, Angular (Typescript + RxJs), Firebase (Firestore)
+          </div>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">Self-Learning Project</span>
+        </div>
+      </div>
+  </section> -->
+  <!-- About current-project End -->
+
+  <!-- <hr class="m-0"> -->
 
 
 </div>
