--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         <a href="mailto:krunal273@email.com">krunal273@gmail.com</a>
       </div>
       <p class="lead mb-5">
-        Hello there !!!... I'm Krunal Patel. I'm passionate about computer and especially
-        when it comes to programming, I'm curious to know how things work under the hood.
-        I believe that in the IT industry everybody is on a continuous learning path.
+        I work at CDI College as a web instructor and currently looking for
+        developer opportunity. Please see visit projects section to check my work. Thank you.
       </p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/krunal-patel-7b6874172/" target="_blank" data-toggle="tooltip"
@@ -219,7 +218,7 @@
 
       <div class="subheading mb-2">Database</div>
       <ul class="list-inline">
-        <li class="list-inline-item database">Oracle</li>
+        <li class="list-inline-item database">Oracle(PL/SQL)</li>
         <li class="list-inline-item database">SQL Server</li>
         <li class="list-inline-item database">MySQL</li>
         <li class="list-inline-item database">SQLite</li>
