--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <h3 class="mb-0"><a href="http://www.djmit.ac.in" target="_blank">Dr. Jivraj Mehta Institute of
               Technology</a></h3>
           <div class="subheading mb-3">Bachelor In Computer Scrience Engineering</div>
-          <p>CPI: 8.04</p>
+          <!-- <p>CPI: 8.04</p> -->
         </div>
         <div class="resume-date text-md-right">
           <span class="text-primary">2013 - 2017</span>
