--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <p class="lead mb-5">
         I work at CDI College as a web instructor and currently looking for
-        developer opportunity. Please see visit projects section to check my work. Thank you.
+        developer opportunity. Please visit projects section to check my work. Thank you.
       </p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/krunal-patel-7b6874172/" target="_blank" data-toggle="tooltip"
