--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#project">Projects</a>
       </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link js-scroll-trigger" href="#current-project">Current Project</a>
-      </li> -->
+      <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#current-project">In Progress</a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -117,7 +117,8 @@
                 URL
               </a>
             </mark>
-            to see what I instruct at CDI College. (Please see PROGRAM COURSES section when you visit this connect).
+            to perceive what I instruct at CDI College. (Please check PROGRAM COURSES section when you visit this
+            connect).
           </p>
 
         </div>
@@ -345,7 +346,7 @@
             do CRUD
             operation, functionality like sorting, pagination, filtering. Besides,
             an anonymous user can add items to cart but to order user must have to login via Google (Google
-            Authentication).
+            Authentication). In addition, app has global error handling functionality.
             <br>
             <mark>
               To check admin side please visit GitHub Repository of this project(link added above) where I
@@ -471,28 +472,25 @@
   <hr class="m-0">
 
   <!-- About current-project Start -->
-  <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="current-project">
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="current-project">
     <div class="w-100">
-      <h2 class="mb-5">Academic and self-learning Projects</h2>
+      <h2 class="mb-5">In Progress Project</h2>
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
-          <h3 class="mb-0"><a href="https://oshop-8327c.web.app/" target="_blank">
-              Organic Shop Using Angular + Firebase</a>
+          <h3 class="mb-0">
+            <!-- <a href="https://github.com/krunal273/CMS-Shopping-Cart" target="_blank">
+            </a> -->
+            CMS-Shopping-Cart
           </h3>
           <div class="subheading">
-            <a href="https://oshop-8327c.web.app/" target="_blank">
-              Live Demo</a>
-            <a class="ml-5" href="https://github.com/krunal273/Oraganic-Shop" target="_blank">
-              GitHub Repo</a>
-          </div>
-          <div class="subheading">HTML, CSS, Bootstrap, Angular (Typescript + RxJs), Firebase (Firestore)
+            HTML, CSS, Bootstrap, jQuery, C#, ASP.NET MVC
           </div>
         </div>
         <div class="resume-date text-md-right">
           <span class="text-primary">Self-Learning Project</span>
         </div>
       </div>
-  </section> -->
+  </section>
   <!-- About current-project End -->
 
   <!-- <hr class="m-0"> -->
