--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="Swift">
           <img src="./img/languages/swift.png" />
         </li>
+        <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="ASP.NET">
+          <img src="./img/languages/asp.net.png" />
+        </li>
       </ul>
       <ul class="list-inline dev-icons">
         <li class="list-inline-item" data-toggle="tooltip" data-placement="bottom" title="HTML">
