--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           title="GitHub">
           <i class="fab fa-github"></i>
         </a>
-        <a href="./resume/Resume_Krunalkumar.pdf" target="_blank" data-toggle="tooltip" data-placement="bottom"
-          title="Download Resume">
+        <a href="https://drive.google.com/file/d/15fvHVVuWVkA5vZSJA56Igb5himWtb1NC/view?usp=sharing" target="_blank"
+          data-toggle="tooltip" data-placement="bottom" title="Download Resume">
           <i class="fa fa-download"></i>
         </a>
         <!-- <a href="#" target="_blank">
