Video demo Added

--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
           <div class="subheading">
             <a href="https://oshop-8327c.web.app/" target="_blank">
               Live Demo</a>
+
+            <a class="ml-5"
+              href="https://www.linkedin.com/posts/krunal-patel-7b6874172_angular-firebase-activity-6688872000397692928-YR9D"
+              target="_blank">
+              Video Demo</a>
+              
             <a class="ml-5" href="https://github.com/krunal273/Oraganic-Shop" target="_blank">
               GitHub Repo</a>
           </div>
