--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h1 class="mb-0">Krunal
         <span class="text-primary">Patel</span>
       </h1>
-      <div class="subheading mb-5">Montreal · Quebec, Canada · +1 (514) 561-3661 ·
+      <div class="subheading mb-5">+1 (514) 561-3661 ·
         <a href="mailto:krunal273@email.com">krunal273@gmail.com</a>
       </div>
       <p class="lead mb-5">
@@ -118,7 +118,19 @@
             to perceive what I instruct at CDI College. (Please check PROGRAM COURSES section when you visit this
             connect).
           </p>
-
+          <ul>
+            <li>Teaching Web Development and Design practices
+              with different web languages and tools such as
+              HTML, CSS, JavaScript, jQuery, PHP, and Photoshop
+            </li>
+            <li>
+              Developed students' computer and technology skills through demonstrations and practice.
+            </li>
+            <li>Created special handouts, study guides and
+              assessments to evaluate and boost student
+              knowledge.
+            </li>
+          </ul>
         </div>
         <div class="resume-date text-md-right">
           <span class="text-primary">September 2019 - Present</span>
@@ -128,7 +140,12 @@
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
           <h3 class="mb-0">Project Leader + Developer</h3>
-          <div class="subheading">Progranz</div>
+          <div class="subheading">
+            <a href="https://github.com/krunal273/progranz" target="_blank">
+              Progranz</a>
+          </div>
+
+
           <div class="subheading mb-3">Dr. Jivraj Mehta Institute of Technology</div>
           <p>Progranz is an e-learning web application. An easy automotive Progranz is providing all need material for
             student using a
@@ -137,9 +154,34 @@
             is divided in different modules such as course section, blog section, quiz section, material section, code
             compiler.
           </p>
+
+          <ul>
+            <li>Created eye catching and functional E-learning
+              (Progranz) concepts across web platform to
+              strengthen company brand and identity.
+            </li>
+            <li>
+              Used programming capabilities in PHP, SQL,
+              JavaScript, and jQuery and other libraries as
+              needed.
+            </li>
+            <li>
+              Defined responsibilities, duties, and roles of each
+              team member.
+            </li>
+            <li>
+              Managed team meetings and discussed project's
+              goals and objectives.
+            </li>
+            <li>
+              Managed administrative logistics of events planning,
+              including contract signing, fee collection, event
+              booking and event promotions.
+            </li>
+          </ul>
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">2017</span>
+          <span class="text-primary">2016 - 2017</span>
         </div>
       </div>
 
@@ -151,6 +193,15 @@
           <p>TechFest was a DJMIT, Anand technical festival.It also refers to the independent body
             of students who organize this event along with many other social initiatives and
             outreach programs around the year. </p>
+
+          <ul>
+            <li>
+              Managed administrative logistics of events planning,
+              including contract signing, fee collection, event
+              booking and event promotions.
+            </li>
+          </ul>
+
         </div>
         <div class="resume-date text-md-right">
           <span class="text-primary">2016</span>
@@ -160,9 +211,21 @@
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
           <h3 class="mb-0">Data Entry Agent</h3>
+
+          <ul>
+            <li>
+              Completed data entry tasks with accuracy and
+              efficiency.
+            </li>
+            <li>
+              Organized, sorted and checked input data against
+              original documents.
+            </li>
+          </ul>
+
         </div>
         <div class="resume-date text-md-right">
-          <span class="text-primary">2015 - 2017</span>
+          <span class="text-primary">2013 - 2018</span>
         </div>
       </div>
 
