--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
       </div>
       <p class="lead mb-5">
         I work at CDI College as a web instructor and currently looking for
-        developer opportunity. Please visit projects section to check my work. Thank you.
+        developer opportunity. Please visit
+        <a class="js-scroll-trigger" style="display: inline;" href="#project">PROJECT SECTION</a>
+        to check my work. Thank you.
       </p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/krunal-patel-7b6874172/" target="_blank" data-toggle="tooltip"
@@ -105,7 +107,7 @@
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
         <div class="resume-content">
-          <h3 class="mb-0">Web Instructor</h3>
+          <h3 class="mb-0">Web Design Instructor</h3>
           <div class="subheading">CDI COLLEGE</div>
           <p>
             Please visit this
