--- a/index.html
+++ b/index.html
@@ -69,8 +69,16 @@
         <a href="mailto:krunal273@email.com">krunal273@gmail.com</a>
       </div>
       <p class="lead mb-5">
-        I work at CDI College as a web instructor and currently looking for
-        developer opportunity. Please visit
+
+        Self-motivated developer with a high level of experience working on
+        multiple projects. Quickly learn and master new technologies and
+        working in both team and self-directed settings. Excellent
+        understanding of development principles and programming for diverse
+        operating systems. Experienced in the full project life cycle from design
+        to implementation to integration.
+        <br />
+        <br />
+        Please visit
         <a class="js-scroll-trigger" style="display: inline;" href="#project">PROJECT SECTION</a>
         to check my work. Thank you.
       </p>
