--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
     <div class="w-100">
       <h2 class="mb-5">Experience</h2>
 
+      <!-- Instructor -->
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
         <div class="resume-content">
-          <h3 class="mb-0">Web Design Instructor</h3>
+          <h3 class="mb-0">Web Design Instructor (Remotely)</h3>
           <div class="subheading">CDI COLLEGE</div>
           <p>
             Please visit this
@@ -147,16 +148,49 @@
         </div>
       </div>
       <br>
+
+      <!-- Full Stack Developer Freelancing -->
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
-          <h3 class="mb-0">Project Leader + Developer</h3>
+          <h3 class="mb-0">Full stack Developer</h3>
+          <div class="subheading">
+            <a href="https://www.10minuteideas.com/" target="_blank">
+              10minuteideas.com
+            </a>
+          </div>
+
+
+          <div class="subheading mb-3">Freelancing</div>
+          <ul>
+            <li>Developed products for clients based on their
+              requirements.
+            </li>
+            <li>
+              Adjusted software parameters to boost performance
+              and incorporate new features.
+            </li>
+            <li>
+              Reviewed code, debugged problems and
+              corrected issues.
+            </li>
+          </ul>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">2016 - 2017</span>
+        </div>
+      </div>
+
+      <!-- Full Stack Developer and Project Leader, Prakarsh Technologies -->
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0">Full stack Developer and Project Leader</h3>
           <div class="subheading">
             <a href="https://github.com/krunal273/progranz" target="_blank">
               Progranz</a>
           </div>
 
 
-          <div class="subheading mb-3">Dr. Jivraj Mehta Institute of Technology</div>
+          <div class="subheading mb-3">Prakarsh technologies, Anand</div>
           <p>Progranz is an e-learning web application. An easy automotive Progranz is providing all need material for
             student using a
             system occupied great result and knowledge. Progranz is developed using HTML, CSS, JavaScript, jQuery,
@@ -195,7 +229,7 @@
         </div>
       </div>
 
-      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+      <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
           <h3 class="mb-0">Event Coordinator</h3>
           <div class="subheading">Techfest</div>
@@ -216,9 +250,9 @@
         <div class="resume-date text-md-right">
           <span class="text-primary">2016</span>
         </div>
-      </div>
+      </div> -->
 
-      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+      <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
           <h3 class="mb-0">Data Entry Agent</h3>
 
@@ -237,7 +271,7 @@
         <div class="resume-date text-md-right">
           <span class="text-primary">2013 - 2018</span>
         </div>
-      </div>
+      </div> -->
 
 
 
@@ -397,7 +431,7 @@
   <!-- About Project Start -->
   <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="project">
     <div class="w-100">
-      <h2 class="mb-5">Academic and self-learning Projects</h2>
+      <h2 class="mb-5">Projects</h2>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="resume-content">
@@ -429,9 +463,9 @@
             Authentication). In addition, app has global error handling functionality.
           </p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Self-Learning Project</span>
-        </div>
+        </div> -->
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -447,9 +481,9 @@
             MongoDB database. I also used MongoDB Atlas to store data in cloud and mvc architecture.
           </p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Internship + Self-Learning Project</span>
-        </div>
+        </div> -->
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -463,9 +497,25 @@
             class for manipulating the database. Most of the Server-Side Calls are done using Ajax.
           </p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Academic Project</span>
+        </div> -->
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0"><a href="https://github.com/krunal273/recipe" target="_blank">Progranz</a></h3>
+          <div class="subheading">HTML, CSS, Bootstrap, JavaScript, jQuery, Ajax, PHP</div>
+          <p>
+            Progranz is an e-learning web application. An easy automotive Progranz is providing all need material for
+            student using a system occupied great result and knowledge. Progranz is developed using HTML, CSS,
+            JavaScript, jQuery, Ajax and PHP. Website is divided in different modules such as course section, blog
+            section, quiz section, material section, code compiler.
+          </p>
         </div>
+        <!-- <div class="resume-date text-md-right">
+          <span class="text-primary">Academic Project</span>
+        </div> -->
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -482,9 +532,36 @@
             Entity Framework. Application is created utilizing LINQ
             and lambda expression with regards to EF.</p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Academic Project</span>
+        </div> -->
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0">
+            Rest API - Node.js,Express.js, API Caching using Redis
+          </h3>
+          <!-- <div class="subheading mb-3">Android - Java</div> -->
+          <p>Developed REST API using Node.js and added Caching
+            functionality.</p>
         </div>
+        <!-- <div class="resume-date text-md-right">
+          <span class="text-primary">Academic Project</span>
+        </div> -->
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0"><a href="https://github.com/krunal273/Mailbox" target="_blank">MailBox</a>
+          </h3>
+          <div class="subheading">Node.js, Express.js, MongoDB</div>
+          <p>This application is similar to any mailing application through
+            which you can send or receive mail.</p>
+        </div>
+        <!-- <div class="resume-date text-md-right">
+          <span class="text-primary">Academic Project</span>
+        </div> -->
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -495,9 +572,9 @@
           <p>The purpose of the application is to help a user to find the path between two metro stations of Montreal
             City.</p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Academic Project</span>
-        </div>
+        </div> -->
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -509,9 +586,9 @@
             “Shamim” to select types of burgers, some of the additional items (additions) to be
             added to the burgers and pricing. </p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Academic Project</span>
-        </div>
+        </div> -->
       </div>
 
       <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -522,9 +599,9 @@
           <div class="subheading mb-3">Python, Vagrant (DevOps)</div>
           <p>Profile Rest api.</p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Self-Learning</span>
-        </div>
+        </div> -->
       </div>
 
 
@@ -535,9 +612,20 @@
           <div class="subheading mb-3">Swift, Xcode(10.2.1)</div>
           <p>Quiz IOS app.</p>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Academic Project</span>
+        </div> -->
+      </div>
+
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-content">
+          <h3 class="mb-0"><a href="https://github.com/krunal273/portfolio" target="_blank">Portfolio</a></h3>
+          <!-- <div class="subheading mb-3">Swift, Xcode(10.2.1)</div> -->
+          <p>This website that you are currently viewing.</p>
         </div>
+        <!-- <div class="resume-date text-md-right">
+          <span class="text-primary">Academic Project</span>
+        </div> -->
       </div>
     </div>
 
@@ -561,9 +649,9 @@
             HTML, CSS, Bootstrap, jQuery, C#, ASP.NET MVC
           </div>
         </div>
-        <div class="resume-date text-md-right">
+        <!-- <div class="resume-date text-md-right">
           <span class="text-primary">Self-Learning Project</span>
-        </div>
+        </div> -->
       </div>
   </section>
   <!-- About current-project End -->
