--- a/index.html
+++ b/index.html
@@ -452,15 +452,13 @@
           </div>
           <div class="subheading">HTML, CSS, Bootstrap, Angular (Typescript + RxJs), Firebase (Firestore)
           </div>
-          <p>The organic shop is an online store web app for an organic product. I developed this project using Angular
-            9
-            (TypeScript and RxJs) and Cloud Firestore database of Google Firebase which is very powerful realtime
-            database.
-            Moreover, the admin side(panel) is implemented with rich features and functionality. Such as, the admin can
-            do CRUD
-            operation, functionality like sorting, pagination, filtering. Besides,
-            an anonymous user can add items to cart but to order user must have to login via Google (Google
-            Authentication). In addition, app has global error handling functionality.
+          <p>
+            The Organic Shop is a dynamic and user-friendly online store for organic products. 
+            Built with Angular 9 and Google Firebase's Cloud Firestore, this web app ensures real-time data updates for an excellent user experience. 
+            The admin panel is packed with features, allowing easy management of products with options for sorting, filtering, and pagination. 
+            Shoppers can browse and add items to their cart seamlessly, with secure Google Authentication required for order placement. 
+            The app also includes robust error handling to maintain smooth operation. 
+            This project showcases my skills in modern web development and my ability to create intuitive, efficient solutions.
           </p>
         </div>
         <!-- <div class="resume-date text-md-right">
